fix: :ambulance: Fixed the cards on mobile and safari
In this patch we fixed the bug that made apple devices not work. The bug came when pressing a card. This was fixed by adding some webkits aswell as using some other methods

All should be good now :D

--- a/Styles/Vendespil12.CSS
+++ b/Styles/Vendespil12.CSS
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   user-select: none;
+  -webkit-user-select: none;
   box-sizing: border-box;
 }
 
@@ -139,7 +140,7 @@ body {
 
 .forside-kort {
   transform: rotateY(180deg);
-  -webkit-transform-origin-y: 180deg;
+  -webkit-transform: rotateY(180deg);
   animation-duration: 0ms;
 }
 
