--- a/Styles/Vendespil6.CSS
+++ b/Styles/Vendespil6.CSS
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   user-select: none;
+  -webkit-user-select: none;
   box-sizing: border-box;
 }
 
@@ -67,27 +68,30 @@ body {
   -webkit-transform: scale(1);
   -webkit-transform-style: preserve-3d;
   -webkit-transition: transform 0.5s;
+  animation-duration: 0ms;
 }
 
 .Vende-kort:active {
-  transform: scale(0.97);
+  transform: scale(1);
   transition: transform 0.2s;
-  -webkit-transform: scale(0.97);
+  -webkit-transform: scale(1);
   -webkit-transition: transform 0.2s;
+  animation-duration: 0ms;
 }
 
 .Vende-kort.vend {
   transform: rotateY(180deg);
   -webkit-transform-origin-y: 180deg;
+  animation-duration: 0ms;
 }
 
 .Vende-kort.match {
   transform: scale(1.25);
   -webkit-transform: scale(1.25);
+  animation-duration: 0ms;
 }
 
 .Vende-kort.rotate{
-  
   transform: rotateY(-180deg);
   -webkit-transform: rotateY(-180deg);
 }
@@ -126,12 +130,15 @@ body {
   width: 100%;
   height: 100%;
   border-radius: 5px;
+  -webkit-backface-visibility: hidden;
+  visibility:visible;
   backface-visibility: hidden;
 }
 
 .forside-kort {
   transform: rotateY(180deg);
-  -webkit-transform-origin-y: 180deg;
+  -webkit-transform: rotateY(180deg);
+  animation-duration: 0ms;
 }
 
 h1 {
